--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,7 +45,7 @@ a {
 a:hover,
 a:focus {
   color: #f00;
-  outline: 3px solid blue
+  outline: 2px solid blue
 }
 
 
@@ -117,7 +117,6 @@ a:focus {
 
 .info-menu a {
   display: inline-block;
-  /* background-color: lime; */
   padding: 8px 10px;
 }
 
@@ -165,7 +164,6 @@ a:focus {
 }
 
 .sub-menu {
-  background: yellow;
   position: absolute;
   top: 47px;
   font-size: 0;
@@ -178,14 +176,14 @@ a:focus {
 }
 
 .sub-menu a::before {
-  content: "\e804";
+  content: "\e802";
   font-family: "fontello";
   /* 아이콘 폰트 자체의 문제이기 때문에 어쩔 수 없이 집어넣는 코드 */
   margin-right: 10px;
 }
 
 .sub-menu a:hover::before {
-  content: "\e802"
+  content: "\e803"
 }
 
 .sub-menu li,
@@ -221,9 +219,46 @@ a:focus {
   right: 0;
 }
 
+.sub-menu-active {
+  display: block !important;
+}
+
+
+/* 비주얼 */
+
+@keyframes text-ani {
+  0% {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0);
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  100% {
+    font-size: 24px;
+    color: rgba(0, 0, 0, 1);
+    transform: translate(400px, 75px);
+    opacity: 1;
+  }
+}
+
 .visual {
   background-color: pink;
   height: 120px;
+}
+
+.visual-text {
+  opacity: 0;
+  /* animation-name: text-ani;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: 3;
+  animation-direction: alternate;
+  animation-timing-function: ease-in-out;
+  animation-delay: 1s; */
+  /* animation: text-ani 1s forwards 3 alternate ease-in-out 1s; */
+  animation: text-ani 1s forwards 6 alternate ease-in-out;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  width: 330px;
 }
 
 .main-content {
