--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,8 @@
 
 /* 숨긴 콘텐츠 */
 
-.readable-hidden {
+.readable-hidden,
+legend {
   background-color: red;
   /* display: none; */
   /* 이걸 쓰면 안 됨 읽을 수 있지만 보이지 않게 해야하는데 이건 아예 읽을 수 없게 하기 때문 */
@@ -59,8 +60,12 @@ a:focus {
 }
 
 .wrapper {
-  background-color: gray;
-  height: 100vh;
+  /* background-image: url("images/bg_flower.png"), linear-gradient(to bottom, #aaa 0%, #fff 50%, #fff 100%);
+  background-repeat: no-repeat;
+  background-position: 50% 0, 0 0; */
+  /* background-attachment: fixed; */
+  background: url("images/bg_flower.png") no-repeat 50% 0, linear-gradient(to bottom, #aaa 0%, #fff 50%, #fff 100%);
+  background-color: #aaa;
 }
 
 
@@ -241,9 +246,38 @@ a:focus {
   }
 }
 
+@keyframes flower-ani {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .visual {
-  background-color: pink;
   height: 120px;
+  position: relative;
+}
+
+.visual::before,
+.visual::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.visual::before {
+  background: url("images/ani_flower_01.png") no-repeat 0 -15px, url("images/ani_flower_02.png") no-repeat 670px 0;
+  animation: flower-ani 2s alternate infinite 1.34s;
+}
+
+.visual::after {
+  background: url("images/ani_flower_03.png") no-repeat 300px 0, url("images/ani_flower_04.png") no-repeat 800px 0;
+  animation: flower-ani 2s alternate infinite;
 }
 
 .visual-text {
@@ -255,14 +289,16 @@ a:focus {
   animation-direction: alternate;
   animation-timing-function: ease-in-out;
   animation-delay: 1s; */
-  /* animation: text-ani 1s forwards 3 alternate ease-in-out 1s; */
-  animation: text-ani 1s forwards 6 alternate ease-in-out;
+  /* animation: text-ani 3s forwards 6 alternate ease-in-out 2s; */
+  animation: text-ani 1s forwards;
+  /* animation-play-state: paused */
   font-family: Georgia, 'Times New Roman', Times, serif;
   width: 330px;
 }
 
 .main-content {
-  background-color: red;
+  background-color: #fff;
+  border-radius: 25px 25px 0 0;
   padding: 30px;
   /* overflow: hidden; */
   min-height: 400px;
@@ -302,6 +338,172 @@ a:focus {
   background-color: orange;
   /* float: left; */
 }
+
+
+/* 로그인 */
+
+.login {
+  background: radial-gradient(circle at right top, #efc62f, #d88e04);
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 5px 5px 0 0 #aaa;
+}
+
+.login-heading {
+  color: #ff0;
+  font-size: 1.5rem;
+  font-family: "Noto Sans Bold";
+  margin: 0 0 10px 10px;
+}
+
+.login-form {
+  background: #fff;
+  border-radius: 5px 5px 0 0;
+  padding: 10px 10px 0 10px;
+}
+
+.login-form fieldset {
+  position: relative;
+  border-bottom: 1px solid #aaa;
+  padding-bottom: 4px;
+}
+
+.user-email,
+.user-pw {
+  margin-bottom: 6px;
+}
+
+.login-form label,
+.login-form,
+.btn-login {
+  font-size: 1.4rem;
+}
+
+.login-form label {
+  width: 4em;
+  display: inline-block;
+}
+
+.login-form input {
+  width: 98px;
+  height: 22px;
+  border: 1px solid #aaa;
+  padding: 0 0 0 5px;
+}
+
+.btn-login {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0 5px;
+  border: 0;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  background: #f00;
+  border-radius: 3px;
+}
+
+.member {
+  background: #fff;
+  border-radius: 0 0 5px 5px;
+  padding: 10px 10px 10px 10px;
+}
+
+.member::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.member li {
+  letter-spacing: -1px;
+}
+
+.member li:nth-child(1) {
+  float: left;
+}
+
+.member li:nth-child(2) {
+  float: right;
+}
+
+.member a {
+  padding: 5px 0;
+}
+
+.member a::before {
+  content: "g";
+  font-family: "webcafeIcon";
+  position: relative;
+  top: 2px;
+  color: #f00;
+}
+
+
+/* 내가 짰던 코드 */
+
+
+/* .login-heading {
+  background-color: orange;
+  display: block;
+  padding: 10px
+}
+
+.login {
+  background-color: orange;
+  height: 160px;
+}
+
+.login-form {
+  background-color: white;
+  width: 230px;
+  flex-wrap: wrap;
+  margin: 0 10px 0 10px;
+  padding: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.login-form>fieldset {
+  margin: 0 3px 0 5px;
+  border-bottom: 1px solid gray;
+}
+
+.user-email,
+.user-pw {
+  float: left;
+  margin-top: 4px;
+}
+
+#user-email,
+#user-pw {
+  width: 95px;
+}
+
+#user-email {
+  margin-left: 13px
+}
+
+.btn-login {
+  color: white;
+  background-color: red;
+  padding: 15px 5px;
+  margin: 5px 0 5px 5px;
+  border-radius: 5px;
+}
+
+.member {
+  background-color: white;
+  margin: 0 10px 10px 10px;
+  padding: 0 10px 10px 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+} */
 
 .slogan {
   background-color: lime;
