return to seulbinim style

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -342,8 +342,7 @@ a:focus {
 
 /* 로그인 */
 
-
-/* .login {
+.login {
   background: radial-gradient(circle at right top, #efc62f, #d88e04);
   border-radius: 5px;
   padding: 10px;
@@ -440,12 +439,13 @@ a:focus {
   position: relative;
   top: 2px;
   color: #f00;
-} */
+}
 
 
 /* 내가 짰던 코드 */
 
-.login,
+
+/* .login,
 .login-heading {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -509,7 +509,7 @@ a:focus {
   justify-content: space-around;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-}
+} */
 
 .slogan {
   background-color: lime;
